--- a/Streamlit.ipynb
+++ b/Streamlit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "019ccbb2",
    "metadata": {
     "ExecuteTime": {
@@ -51,13 +51,13 @@
     "    st.markdown(\"\"\"\n",
     "    **Not:** This analysis is done on a per ASIN basis.    \n",
     "\n",
-    "    **R = P – C ** \n",
+    "    **R = P – C** \n",
     "    \n",
-    "    **R: Revenue (USD) **\n",
+    "    **R: Revenue ($)**\n",
     "    \n",
-    "    **P: Price (USD) **\n",
+    "    **P: Price ($)**\n",
     "    \n",
-    "    **C: Cost (USD) ** \n",
+    "    **C: Cost ($)** \n",
     "    \n",
     "    P = Selling price of the product in Canada\n",
     "    \n",
@@ -100,7 +100,7 @@
     "        input_data = {}\n",
     "        col1, col2, col3, col4, col5, col6 = st.columns(6)\n",
     "        with col1:\n",
-    "            st.markdown(\"**Purchase Price from the US($):**\")\n",
+    "            st.markdown(\"**Purchase Price from US($):**\")\n",
     "            input_data['us_purchase_price'] = st.number_input('', value=39.99 )  \n",
     "        with col3:\n",
     "            st.markdown(\"**Sales Price at Canada($):**\")\n",
@@ -114,14 +114,14 @@
     "            st.markdown(\"**Wharehouse Handling Fee($):**\")\n",
     "            input_data['oneamz_fee'] = st.number_input('', value=42.78)  \n",
     "        with col9:\n",
-    "            st.markdown(\"**Sub Category Sales Rank:**\")\n",
+    "            st.markdown(\"**Sub Category Sales Rank of Product:**\")\n",
     "            input_data['Sub_Sales_Rank'] = st.number_input('', value=4)\n",
     "        with col11:\n",
-    "            st.markdown(\"**Daily Sales Number:**\")\n",
+    "            st.markdown(\"**Daily Sales Quantity of Product:**\")\n",
     "            input_data['daily_sales'] = st.number_input('', value=48)\n",
     "        col13, col14, col15, col16,col17,col18 = st.columns(6)\n",
     "        with col13:\n",
-    "            st.markdown(\"**Rewiew Number:**\")\n",
+    "            st.markdown(\"**Rewiew Num:**\")\n",
     "            input_data['mnumber_of_reviews'] = st.number_input('', value=8904)\n",
     "        with col15:\n",
     "            st.markdown(\"**Seller Number:**\")\n",
@@ -131,13 +131,13 @@
     "            input_data['rating'] = st.number_input('', value=4.2)\n",
     "        col19, col20, col21, col22,col23,col24 = st.columns(6)\n",
     "        with col19:\n",
-    "            st.markdown(\"**Optimum Selling Price Calculated for Canada($):**\")\n",
+    "            st.markdown(\"**Optimum Price for Canada($):**\")\n",
     "            input_data['optimum_price'] = st.number_input('', value=114.41)\n",
     "        with col21:\n",
     "            st.markdown(\"**Net Profit for Seller($):**\")\n",
     "            input_data['Remaining_Profit_to_OneAMZ_Seller'] = st.number_input('', value=22.59)\n",
     "        with col23:\n",
-    "            st.markdown(\"**Net Profit Ratio of Seller(%):**\")\n",
+    "            st.markdown(\"**Net Profit Ratio (%):**\")\n",
     "            input_data['Net_Profit_Remaining_for_OneAMZ_Seller'] = st.number_input('', value=24.60)\n",
     "        \n",
     "        \n",
@@ -149,7 +149,7 @@
     "        input_data = {}\n",
     "        col1, col2, col3, col4, col5, col6 = st.columns(6)\n",
     "        with col1:\n",
-    "            st.markdown(\"**Purchase Price from the US($):**\")\n",
+    "            st.markdown(\"**Purchase Price from US($):**\")\n",
     "            input_data['us_purchase_price'] = st.number_input('', value=32.99 )  \n",
     "        with col3:\n",
     "            st.markdown(\"**Sales Price at Canada($):**\")\n",
@@ -163,14 +163,14 @@
     "            st.markdown(\"**Wharehouse Handling Fee($)):**\")\n",
     "            input_data['oneamz_fee'] = st.number_input('', value=15.75)  \n",
     "        with col9:\n",
-    "            st.markdown(\"**Sub Category Sales Rank:**\")\n",
+    "            st.markdown(\"**Sub Category Sales Rank of Product:**\")\n",
     "            input_data['Sub_Sales_Rank'] = st.number_input('', value=4)\n",
     "        with col11:\n",
-    "            st.markdown(\"**Daily Sales Number:**\")\n",
+    "            st.markdown(\"**Daily Sales Number of Product:**\")\n",
     "            input_data['daily_sales'] = st.number_input('', value=174)\n",
     "        col13, col14, col15, col16,col17,col18 = st.columns(6)\n",
     "        with col13:\n",
-    "            st.markdown(\"**Rewiew Number:**\")\n",
+    "            st.markdown(\"**Rewiew Num:**\")\n",
     "            input_data['mnumber_of_reviews'] = st.number_input('', value=42352)\n",
     "        with col15:\n",
     "            st.markdown(\"**Seller Number:**\")\n",
@@ -180,24 +180,24 @@
     "            input_data['rating'] = st.number_input('', value=4.4)\n",
     "        col19, col20, col21, col22,col23,col24 = st.columns(6)\n",
     "        with col19:\n",
-    "            st.markdown(\"**Optimum Selling Price Calculated for Canada($):**\")\n",
+    "            st.markdown(\"**Optimum Price for Canada($):**\")\n",
     "            input_data['optimum_price'] = st.number_input('', value=67.46)\n",
     "        with col21:\n",
     "            st.markdown(\"**Net Profit for Seller($):**\")\n",
     "            input_data['Remaining_Profit_to_OneAMZ_Seller'] = st.number_input('', value=11.60)\n",
     "        with col23:\n",
-    "            st.markdown(\"**Net Profit Ratio of Seller(%):**\")\n",
+    "            st.markdown(\"**Net Profit Ratio (%):**\")\n",
     "            input_data['Net_Profit_Remaining_for_OneAMZ_Seller'] = st.number_input('', value=20.77)\n",
     "            \n",
     "        \n",
     "         # Ürün Bilgilerini Göster\n",
     "    elif selected_asin == \"B0811VD9MY\":\n",
-    "        st.image(\"B0811VD9MY.jpg\", caption=\"Ürün Resmi\", width=160)\n",
+    "        st.image(\"B0811VD9MY.jpg\", caption=\"Product Photo\", width=160)\n",
     "        # Kullanıcı girdilerini al\n",
     "        input_data = {}\n",
     "        col1, col2, col3, col4, col5, col6 = st.columns(6)\n",
     "        with col1:\n",
-    "            st.markdown(\"**Purchase Price from the US($):**\")\n",
+    "            st.markdown(\"**Purchase Price from US($):**\")\n",
     "            input_data['us_purchase_price'] = st.number_input('', value=13.39)  \n",
     "        with col3:\n",
     "            st.markdown(\"**Sales Price at Canada($):**\")\n",
@@ -211,14 +211,14 @@
     "            st.markdown(\"**Wharehouse Handling Fee($):**\")\n",
     "            input_data['oneamz_fee'] = st.number_input('$', value=13.53)  \n",
     "        with col9:\n",
-    "            st.markdown(\"**Sub Category Sales Rank:**\")\n",
+    "            st.markdown(\"**Sub Category Sales Rank of Product:**\")\n",
     "            input_data['Sub_Sales_Rank'] = st.number_input('', value=25)\n",
     "        with col11:\n",
-    "            st.markdown(\"**Daily Sales Number:**\")\n",
+    "            st.markdown(\"**Daily Sales Number of Product:**\")\n",
     "            input_data['daily_sales'] = st.number_input('', value=3)\n",
     "        col13, col14, col15, col16,col17,col18 = st.columns(6)\n",
     "        with col13:\n",
-    "            st.markdown(\"**Rewiew Number:**\")\n",
+    "            st.markdown(\"**Rewiew Num:**\")\n",
     "            input_data['mnumber_of_reviews'] = st.number_input('', value=69)\n",
     "        with col15:\n",
     "            st.markdown(\"**Seller Number:**\")\n",
@@ -228,13 +228,13 @@
     "            input_data['rating'] = st.number_input('', value=2.7)\n",
     "        col19, col20, col21, col22,col23,col24 = st.columns(6)\n",
     "        with col19:\n",
-    "            st.markdown(\"**Optimum Selling Price Calculated for Canada($):**\")\n",
+    "            st.markdown(\"**Optimum Price for Canada($):**\")\n",
     "            input_data['optimum_price'] = st.number_input('', value=40.69)\n",
     "        with col21:\n",
     "            st.markdown(\"**Net Profit for Seller($):**\")\n",
     "            input_data['Remaining_Profit_to_OneAMZ_Seller'] = st.number_input('', value=5.08)\n",
     "        with col23:\n",
-    "            st.markdown(\"**Net Profit Ratio of Seller(%):**\")\n",
+    "            st.markdown(\"**Net Profit Ratio (%):**\")\n",
     "            input_data['Net_Profit_Remaining_for_OneAMZ_Seller'] = st.number_input('', value=14.26)\n",
     "\n",
     "def Fiyat_Miktar_İlişkisi():\n",
@@ -243,8 +243,8 @@
     "    st.markdown(\"\"\"\n",
     "    **About Dataset:**\n",
     "\n",
-    "    - Q: Quantity (\n",
-    "    - P: Price \n",
+    "    - **Q:** Quantity \n",
+    "    - **P:** Price \n",
     "\n",
     "    **Model: P = β₀ + β₁ * Q**\n",
     "    \"\"\")\n",
@@ -353,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.9"
   },
   "nbTranslate": {
    "displayLangs": [
